--- a/UkadTestTask/Content/Site.css
+++ b/UkadTestTask/Content/Site.css
@@ -1,24 +1,617 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿html,body, .body-content { height: 100%; width: 100%; overflow: hidden; }
+body { background-color: #0072c6; }
+#main-progress-bar { height: 0.4em; box-shadow: 0 1px 5px 1px black;}
+#input-url{box-shadow: 1px 3px 5px 0px #575555 inset; border:none;}
+#input-url::-webkit-input-placeholder       {text-indent: 0px;   transition: text-indent 0.9s ease;}
+#input-url::-moz-placeholder                {text-indent: 0px;   transition: text-indent 0.9s ease;}
+#input-url:-moz-placeholder                 {text-indent: 0px;   transition: text-indent 0.9s ease;}
+#input-url:-ms-input-placeholder            {text-indent: 0px;   transition: text-indent 0.9s ease;}
+#input-url:focus::-webkit-input-placeholder {text-indent: 70em; transition: text-indent 0.9s ease;}
+#input-url:focus::-moz-placeholder          {text-indent: 70em; transition: text-indent 0.9s ease;}
+#input-url:focus:-moz-placeholder           {text-indent: 70em; transition: text-indent 0.9s ease;}
+#input-url:focus:-ms-input-placeholder      {text-indent: 70em; transition: text-indent 0.9s ease;}
+svg, svg:not(:root) { overflow: visible;}
+#main-desc  {
+    width: 70%;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 10em;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+#desc-1-container {
+    position: absolute;
+    left: 0;
+    right: 0;
+    width: 70%;
+    margin: 0 auto;
+    transition: all 0.7s ease-out;
+}
+#desc-1-container h1 {
+    display: inline-block;
+    text-shadow: 1px 1px 1px steelblue,
+                 1px -1px 1px steelblue,
+                 -1px 1px 1px steelblue,
+                 -1px -1px 1px steelblue;
+    color: white;
+    transition: all 1s;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+#infographics-panel {
+    width: 100%;
+    position: absolute;
+    top: 100%;
+    height: 85%;
+    background: #263238;
+    left: 0;
+    right: 0;
+    box-shadow: 0 -1px 5px 0px black;
+    transition: all 0.5s ease-in;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+#infographics-panel-container {
+    overflow-y: scroll;
+    height: 100%;
+}
+
+#infographics-panel-container table {
+    color: white;
+}
+
+#load-bar-1 {
+    position: absolute;
+    left: -200%;
+    right: 0;
+    margin: 0 auto;
+    top: 22em;    
+    display: none;
+}
+#horizontal-indicators-container{ color: white;}
+
+#itr-smloadedtime, #itr-gauge-middlespeed,#itr-data {
+    display: inline-block;
+    width: 33.3333%;
+    height: 200px;
+    float: left;
+}
+#itr-smloadedtime {
+    width: 300px;
+    text-align: center;
+    padding-top: 3em;
+}
+#itr-smloadedtime h1 { font-size: 5em;}
+#itr-gauge-middlespeed {
+    padding: 1em;
+    padding-top: 4em;
+    width: 200px;
+}
+
+.hic-vertical-divider
+{    display: inline-block;
+    width: 3px;
+    height: 200px;
+    float: left;
+    background-color: #444;
+    box-shadow: 1px 1px 1px black inset;
+    margin: 1em;
+    border-radius: 50%;}
+
+
+.space {
+    background: transparent;
+    overflow: hidden;
+}
+.space .mars {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+}
+.space .mars .tentacle {
+    position: absolute;
+    top: -60px;
+    right: -80px;
+    z-index: 1;
+    height: 70px;
+    width: 70px;
+    box-sizing: border-box;
+    border-radius: 100%;
+    border-left: 15px solid #1aae1e;
+    -webkit-transform: rotate(-30deg);
+    transform: rotate(-30deg);
+    -webkit-animation: tentacle 12s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+    animation: tentacle 12s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+}
+.space .mars .flag {
+    position: absolute;
+    height: 17px;
+    width: 15px;
+    top: -57px;
+    left: -1px;
+    -webkit-animation: flag-pole 12s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+    animation: flag-pole 12s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+}
+.space .mars .flag:before {
+    content: "";
+    position: absolute;
+    height: 17px;
+    width: 2px;
+    background: #eee;
+}
+.space .mars .flag:after {
+    content: "";
+    position: absolute;
+    height: 10px;
+    width: 14px;
+    left: 2px;
+    top: 0;
+    background: #aaa;
+    -webkit-animation: flag-unfurl 12s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+    animation: flag-unfurl 12s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+}
+.space .mars .flag .small-tentacle {
+    position: absolute;
+    left: -16px;
+    top: 3px;
+    height: 50px;
+    width: 50px;
+    border-left: 10px solid #1aae1e;
+    border-radius: 100%;
+    -webkit-transform: rotate(25deg);
+    transform: rotate(25deg);
+    -webkit-animation: small-tentacle 12s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+    animation: small-tentacle 12s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+    z-index: 2;
+}
+.space .mars:before {
+    content: "";
+    position: absolute;
+    top: 80px;
+    left: -30px;
+    height: 10px;
+    width: 60px;
+    background: rgba(0, 0, 0, 0.2);
+    background: #374d5c;
+    border-radius: 100%;
+}
+.space .mars .planet {
+    box-sizing: border-box;
+    position: absolute;
+    border-radius: 100%;
+    height: 120px;
+    width: 120px;
+    overflow: hidden;
+    margin-left: -60px;
+    margin-top: -60px;
+    z-index: 2;
+}
+.space .mars .planet .surface {
+    position: absolute;
+    border-radius: 100%;
+    height: 140%;
+    width: 140%;
+    top: -30%;
+    right: -10%;
+    box-sizing: border-box;
+    border: 30px solid rgba(0, 0, 0, 0.15);
+    background: #ff5f40;
+}
+.space .mars .planet .crater1,
+.space .mars .planet .crater2,
+.space .mars .planet .crater3 {
+    position: absolute;
+    border-radius: 100%;
+    background: rgba(0, 0, 0, 0.15);
+    box-shadow: inset 3px 3px 0 rgba(0, 0, 0, 0.2);
+}
+.space .mars .planet .crater1 {
+    height: 20px;
+    width: 20px;
+    top: 32%;
+    left: 17%;
+}
+.space .mars .planet .crater2 {
+    height: 10px;
+    width: 10px;
+    top: 26%;
+    left: 55%;
+    box-shadow: inset 2px 2px 0 rgba(0, 0, 0, 0.2);
+}
+.space .mars .planet .crater3 {
+    height: 10px;
+    width: 10px;
+    top: 60%;
+    left: 40%;
+    box-shadow: inset 2px 2px 0 rgba(0, 0, 0, 0.2);
+}
+.space .ship {
+    position: absolute;
+    right: 50%;
+    top: 50%;
+    margin-top: -55px;
+    margin-right: -55px;
+    height: 22px;
+    background: rgba(0, 0, 0, 0.1);
+    -webkit-transform-origin: 0% 100% 0;
+    transform-origin: 0% 100% 0;
+    z-index: 1;
+    -webkit-animation: ship 12s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+    animation: ship 12s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+}
+.space .ship .ship-rotate {
+    position: absolute;
+    height: 22px;
+    -webkit-transform: rotate(-110deg);
+    transform: rotate(-110deg);
+    -webkit-animation: ship-rotate 12s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+    animation: ship-rotate 12s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+}
+.space .ship .pod {
+    position: absolute;
+    top: 0;
+    left: -8px;
+    height: 16px;
+    width: 16px;
+    background: #eee;
+    border-radius: 100% 0 100% 0;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+.space .ship .fuselage {
+    position: absolute;
+    top: 14px;
+    left: -6px;
+    height: 8px;
+    width: 12px;
+    background: #eee;
+    border-radius: 100% 100% 0 0;
+}
+.space .ship .fuselage:after {
+    content: "";
+    position: absolute;
+    left: 2px;
+    top: 100%;
+    width: 0;
+    height: 0;
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-top: 6px solid red;
+}
+.space .ship-shadow {
+    position: absolute;
+    right: 10%;
+    top: 50%;
+    margin-right: -28px;
+    margin-top: 83px;
+    height: 4px;
+    width: 16px;
+    background: #374d5c;
+    border-radius: 100%;
+    -webkit-animation: ship-shadow 12s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+    animation: ship-shadow 12s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+}
+
+@-webkit-keyframes small-tentacle {
+    0% {
+        -webkit-transform: rotate(-60deg);
+        transform: rotate(-60deg);
+    }
+    86% {
+        -webkit-transform: rotate(-60deg);
+        transform: rotate(-60deg);
+    }
+    89% {
+        -webkit-transform: rotate(10deg);
+        transform: rotate(10deg);
+    }
+    100% {
+        -webkit-transform: rotate(10deg);
+        transform: rotate(10deg);
+    }
+}
+
+@keyframes small-tentacle {
+    0% {
+        -webkit-transform: rotate(-60deg);
+        transform: rotate(-60deg);
+    }
+    86% {
+        -webkit-transform: rotate(-60deg);
+        transform: rotate(-60deg);
+    }
+    89% {
+        -webkit-transform: rotate(10deg);
+        transform: rotate(10deg);
+    }
+    100% {
+        -webkit-transform: rotate(10deg);
+        transform: rotate(10deg);
+    }
+}
+@-webkit-keyframes tentacle {
+    0% {
+        -webkit-transform: rotate(-30deg);
+        transform: rotate(-30deg);
+    }
+    75% {
+        -webkit-transform: rotate(-30deg);
+        transform: rotate(-30deg);
+    }
+    80% {
+        -webkit-transform: rotate(-165deg) translate(6px, 8px);
+        transform: rotate(-165deg) translate(6px, 8px);
+    }
+    82.5% {
+        -webkit-transform: rotate(-165deg) translate(28px, -17px);
+        transform: rotate(-165deg) translate(28px, -17px);
+    }
+    100% {
+        -webkit-transform: rotate(-165deg) translate(35px, -22px);
+        transform: rotate(-165deg) translate(35px, -22px);
+    }
+}
+@keyframes tentacle {
+    0% {
+        -webkit-transform: rotate(-30deg);
+        transform: rotate(-30deg);
+    }
+    75% {
+        -webkit-transform: rotate(-30deg);
+        transform: rotate(-30deg);
+    }
+    80% {
+        -webkit-transform: rotate(-165deg) translate(6px, 8px);
+        transform: rotate(-165deg) translate(6px, 8px);
+    }
+    82.5% {
+        -webkit-transform: rotate(-165deg) translate(28px, -17px);
+        transform: rotate(-165deg) translate(28px, -17px);
+    }
+    100% {
+        -webkit-transform: rotate(-165deg) translate(35px, -22px);
+        transform: rotate(-165deg) translate(35px, -22px);
+    }
+}
+@-webkit-keyframes ship {
+    0% {
+        right: -10%;
+        top: -10%;
+        margin-top: -55px;
+        margin-right: -55px;
+    }
+    40% {
+        right: 50%;
+        top: 50%;
+    }
+    79.5% {
+        margin-top: -55px;
+        margin-right: -55px;
+    }
+    84% {
+        margin-top: -20px;
+        margin-right: 0px;
+    }
+    100% {
+        right: 50%;
+        top: 50%;
+        margin-top: 0px;
+        margin-right: 0px;
+    }
+}
+@keyframes ship {
+    0% {
+        right: -10%;
+        top: -10%;
+        margin-top: -55px;
+        margin-right: -55px;
+    }
+    40% {
+        right: 50%;
+        top: 50%;
+    }
+    79.5% {
+        margin-top: -55px;
+        margin-right: -55px;
+    }
+    84% {
+        margin-top: -20px;
+        margin-right: 0px;
+    }
+    100% {
+        right: 50%;
+        top: 50%;
+        margin-top: 0px;
+        margin-right: 0px;
+    }
+}
+@-webkit-keyframes ship-rotate {
+    0% {
+        -webkit-transform: rotate(-110deg);
+        transform: rotate(-110deg);
+    }
+    20% {
+        -webkit-transform: rotate(-110deg);
+        transform: rotate(-110deg);
+    }
+    34% {
+        -webkit-transform: rotate(47deg);
+        transform: rotate(47deg);
+    }
+    79% {
+        -webkit-transform: rotate(47deg);
+        transform: rotate(47deg);
+    }
+    100% {
+        -webkit-transform: rotate(47deg);
+        transform: rotate(47deg);
+    }
+}
+@keyframes ship-rotate {
+    0% {
+        -webkit-transform: rotate(-110deg);
+        transform: rotate(-110deg);
+    }
+    20% {
+        -webkit-transform: rotate(-110deg);
+        transform: rotate(-110deg);
+    }
+    34% {
+        -webkit-transform: rotate(47deg);
+        transform: rotate(47deg);
+    }
+    79% {
+        -webkit-transform: rotate(47deg);
+        transform: rotate(47deg);
+    }
+    100% {
+        -webkit-transform: rotate(47deg);
+        transform: rotate(47deg);
+    }
+}
+@-webkit-keyframes ship-shadow {
+    0% {
+        right: -10%;
+        -webkit-transform: scale(1.4, 1);
+        transform: scale(1.4, 1);
+        opacity: .3;
+    }
+    40% {
+        right: 50%;
+        -webkit-transform: scale(0.75, 1);
+        transform: scale(0.75, 1);
+        opacity: 1;
+    }
+    100% {
+        right: 50%;
+    }
+}
+@keyframes ship-shadow {
+    0% {
+        right: -10%;
+        -webkit-transform: scale(1.4, 1);
+        transform: scale(1.4, 1);
+        opacity: .3;
+    }
+    40% {
+        right: 50%;
+        -webkit-transform: scale(0.75, 1);
+        transform: scale(0.75, 1);
+        opacity: 1;
+    }
+    100% {
+        right: 50%;
+    }
+}
+@-webkit-keyframes planet-bump {
+    0% {
+        margin-left: 0;
+    }
+    39% {
+        margin-left: 0;
+    }
+    40% {
+        margin-left: -1px;
+    }
+    40.5% {
+        margin-left: 1px;
+    }
+    41% {
+        margin-left: 0;
+    }
+    100% {
+        margin-left: 0;
+    }
+}
+@keyframes planet-bump {
+    0% {
+        margin-left: 0;
+    }
+    39% {
+        margin-left: 0;
+    }
+    40% {
+        margin-left: -1px;
+    }
+    40.5% {
+        margin-left: 1px;
+    }
+    41% {
+        margin-left: 0;
+    }
+    100% {
+        margin-left: 0;
+    }
+}
+@-webkit-keyframes flag-pole {
+    0% {
+        top: -57px;
+    }
+    48% {
+        top: -57px;
+    }
+    54% {
+        top: -77px;
+    }
+    90% {
+        top: -77px;
+    }
+    92% {
+        top: -57px;
+    }
+    100% {
+        top: -57px;
+    }
+}
+@keyframes flag-pole {
+    0% {
+        top: -57px;
+    }
+    48% {
+        top: -57px;
+    }
+    54% {
+        top: -77px;
+    }
+    90% {
+        top: -77px;
+    }
+    92% {
+        top: -57px;
+    }
+    100% {
+        top: -57px;
+    }
+}
+@-webkit-keyframes flag-unfurl {
+    0% {
+        width: 0;
+    }
+    55% {
+        width: 0;
+    }
+    60% {
+        width: 14px;
+    }
+    90% {
+        width: 14px;
+    }
+    100% {
+        width: 14px;
+    }
+}
+@keyframes flag-unfurl {
+    0% {
+        width: 0;
+    }
+    55% {
+        width: 0;
+    }
+    60% {
+        width: 14px;
+    }
+    90% {
+        width: 14px;
+    }
+    100% {
+        width: 14px;
+    }
 }
