--- a/UkadTestTask/Views/Home/Index.cshtml
+++ b/UkadTestTask/Views/Home/Index.cshtml
@@ -1,27 +1,29 @@
-﻿@model UkadTestTask.Models.MainModel
+﻿@using UkadTestTask.Models
+@model MainModel
 @{
     ViewBag.Title = "Home Page";
 }
-
-@using (Ajax.BeginForm("HandleUrl", "Home", new AjaxOptions {UpdateTargetId = "infographics-panel-container", OnComplete = "LoadComplete()" }))
+@section Styles{
+    <link rel="Stylesheet" href="@Href("~/Content/Site.css")" />
+}
+@using (Ajax.BeginForm("HandleUrl", "Home", new AjaxOptions {UpdateTargetId = "input-block", OnComplete = "LoadComplete()", InsertionMode = InsertionMode.Replace}))
 {
-    <div class="input-group input-group-lg">
-        <span class="input-group-addon" id="sizing-addon1"><b>http://</b></span>
-        <input id="input-url" type="text" class="form-control" placeholder="Enter youre URL here" aria-describedby="sizing-addon1" name="Url" value="@Model.Url">
-        <span class="input-group-btn">
-            <button id="start-handle-button" class="btn btn-default" type="submit"><b>Go!</b></button>
-        </span>
-    </div>
-    <div id="infographics-panel">
-        <div id="infographics-panel-container"></div>
+    <div id="input-block">
+        @Html.Partial("UrlInputBlock")
     </div>
 }
+        
+
 <div id="main-desc">  
-    <div id="desc-1-container">
+    <div id="desc-container">
         <h1 id="desc-1">
-            This web service gives you the opportunity to check the performance of your website based on the site map
+            This web service gives you the opportunity<br/> to check the performance of your website<br> based on the site map
+        </h1>
+        <h1 id="desc-2">
+            You do not have any tasks yet <br>— сreate the first task!  
         </h1>
     </div>
+
     <div id="load-bar-1">            
         <div class="space">
             <div class="ship">
