--- a/UkadTestTask/Views/Shared/_Layout.cshtml
+++ b/UkadTestTask/Views/Shared/_Layout.cshtml
@@ -5,31 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-        
-    <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
-
+    @RenderSection("Styles", false)
+    @Scripts.Render("~/bundles/modernizr")            
+    @Scripts.Render("~/bundles/jquery")
+    <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>    
+    @Scripts.Render("~/bundles/bootstrap")
+    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
+    @Scripts.Render("~/bundles/site-script")
 </head>
 <body>
-    <div id="main-progress-bar" class="progress progress-striped active">
-        <div id="main-progress-bar-step-1" class="progress-bar progress-bar-danger" role="progressbar" style="width:0%;"></div>
-        <div class="progress-bar progress-bar-warning" role="progressbar" style="width: 0%;"></div>
-        <div class="progress-bar progress-bar-success" role="progressbar" style="width: 0%;"></div>
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">    
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">UKAD</a>            
+            <p class="navbar-text">Test task</p>
+        </div>
+        <ul class="nav navbar-nav"> <li class="active"><a href="#">Home</a></li> <li><a href="#">About</a></li> <li><a href="#">Contacts</a></li> </ul>    
     </div>
+</nav>
+
 <div class="container body-content">
     @RenderBody()
 
 </div>
 
-@Scripts.Render("~/bundles/jquery")
-@Scripts.Render("~/bundles/bootstrap")
-<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
-@Scripts.Render("~/bundles/site-script")
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script>
-    google.charts.load('current', { 'packages': ['gauge'] });
-    google.charts.setOnLoadCallback(drawChart);
-</script>
 @RenderSection("scripts", required: false)
 </body>
 </html>
