--- a/UkadTestTask/Views/Shared/_Layout.cshtml
+++ b/UkadTestTask/Views/Shared/_Layout.cshtml
@@ -7,11 +7,10 @@
     @Styles.Render("~/Content/css")
     @RenderSection("Styles", false)
     @Scripts.Render("~/bundles/modernizr")            
-    @Scripts.Render("~/bundles/jquery")
-    <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>    
-    @Scripts.Render("~/bundles/bootstrap")
-    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
-    @Scripts.Render("~/bundles/site-script")
+    @Scripts.Render("~/bundles/jquery")     
+    @Scripts.Render("~/bundles/bootstrap")    
+    @Scripts.Render("~/bundles/site-scripts")
+    @Scripts.Render("~/bundles/gauge")
 </head>
 <body>
 <nav class="navbar navbar-default" role="navigation">
