--- a/UkadTestTask/Views/Home/UrlInputBlock.cshtml
+++ b/UkadTestTask/Views/Home/UrlInputBlock.cshtml
@@ -1,4 +1,4 @@
-﻿@model UkadTestTask.Models.MainModel
+﻿@model SiteAnalyzer.Models.MainModel
 <div id="input-group-url" class="input-group input-group-lg">
     <span class="input-group-addon" id="basic-addon">http://</span>
     @Html.TextBoxFor(t => Model.Url, new {@class = "form-control", placeholder = "Enter youre URL here", type = "text", aria_describedby = "basic-addon", id= "input-url" })    
